Ready for Merge

--- a/Jarvis Black- Bio.html
+++ b/Jarvis Black- Bio.html
@@ -34,8 +34,31 @@
     <section>
             <h2 class="major">Get in touch</h2>
             <p>In need of any questions or concerns please feel free to drop it below. Please be very decriptive and
-                thorough as we would like to answer all question and/or requests with efficiency in a timely manner.</p>
+                thorough as I would like to answer all question and/or requests with efficiency in a timely manner.</p>
     </section>
+
+    <section>
+            <form method="post" action="#" netlify>
+                <div class="fields">
+                    <div class="field">
+                        <label for="name">Name</label>
+                        <input type="text" name="name" id="name" />
+                    </div>
+                    <div class="field">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" />
+                    </div>
+                    <div class="field">
+                        <label for="message">Msg.-</label>
+                        <textarea name="message" id="message" rows="4"></textarea>
+                    </div>
+                </div>
+                <!-- actions -->
+                <ul>
+                    <li><input type="submit" value="Send Message" /></li>
+                </ul>
+            </form>
+        </section>
             
             <ul class="contact">
                 <li>
