--- a/Jarvis Black- Bio.html
+++ b/Jarvis Black- Bio.html
@@ -24,7 +24,7 @@
         <h1>Jarvis Black</h1>
 
             <img class="creator-pic" src="images\received_1367078890115453.jpeg" alt="" />
-            
+
             <h4>About Me</h4>
 
         <p>
@@ -59,7 +59,7 @@
                 </ul>
             </form>
         </section>
-            
+
             <ul class="contact">
                 <li>
                     Code Me LLC.<br />
@@ -67,10 +67,10 @@
                     Bullseye, DE 00000-0000
                 </li>
                 <li>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-pinterest"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="http://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.pinterest.com/"><i class="fab fa-pinterest"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
                 </li>
             </ul>
 
