--- a/Jarvis Black- Bio.html
+++ b/Jarvis Black- Bio.html
@@ -10,10 +10,10 @@
 
     <!-- Navigation -->
     <nav>
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="#">Sign up</a>
-        <a href="#">Log in</a>
+        <a href="https://guidr-flame-omega.now.sh/signUp">Sign up</a>
+        <a href="https://guidr-flame-omega.now.sh/">Log in</a>
         <a href="#"><img src="images\logo.png" alt="logo"></a>
     </nav>
 
